fix images in skye site

--- a/skye/index.html
+++ b/skye/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <img id="parallax" src="/img/header.jpg"/>
+    <img id="parallax" src="img/header.jpg"/>
     <header id="header" class="clearfix">
       <h1 class="title">The Isle of Skye</h1>
       <nav class="menu">
@@ -42,7 +42,7 @@
         <p>That said, it isn't hard to escape the madding crowd on Scotland's biggest island - provided you have your own set of wheels. Getting around Skye by public transport can be awkward if you want to stray from the main Kyleakin-Portree-Uig road. But if you have a car, motorcycle or even just rely on pedal power, you can explore the island in a few days and easily disappear off the radar.</p>
 
         <div class="image-container">
-          <a href="https://flic.kr/p/WbWHGc" target="_blank"><img src="/img/story1.jpg"></a>
+          <a href="https://flic.kr/p/WbWHGc" target="_blank"><img src="img/story1.jpg"></a>
           Hikers on the Trotternish ridge. Photo by Tatiana Gerus on <a href="https://flic.kr/p/WbWHGc" target="_blank">Flickr</a>.
         </div>
 
@@ -62,11 +62,11 @@
 
         <div class="row">
           <div class="col-md-6 image-container">
-            <a href="https://flic.kr/p/cB5xww" target="_blank"><img src="/img/story2.jpg"></a>
+            <a href="https://flic.kr/p/cB5xww" target="_blank"><img src="img/story2.jpg"></a>
             The Old Man of Storr. Photo by Abhishek Chinchalkar on <a href="https://flic.kr/p/cB5xww">Flickr</a>
           </div>
           <div class="col-md-6 image-container">
-            <a href="https://flic.kr/p/pzNm7N" target="_blank"><img src="/img/story3.jpg"></a>
+            <a href="https://flic.kr/p/pzNm7N" target="_blank"><img src="img/story3.jpg"></a>
             Waterfalls over Kilt Rock. Photo by Bill Richards on <a href="https://flic.kr/p/pzNm7N" target="_blank">Flickr</a>.
           </div>
         </div>
@@ -86,7 +86,7 @@
         <p>A good taster is the six-mile slog from Glenbrittle camping ground up to Coire Lagan. From here you can use binoculars to monitor the progress of rock climbers spidering up the surrounding cliffs.</p>
 
         <div class="image-container">
-          <a href="https://flic.kr/p/VPEdr7" target="_blank"><img src="/img/story4.jpg"></a>
+          <a href="https://flic.kr/p/VPEdr7" target="_blank"><img src="img/story4.jpg"></a>
           The Cuillin Hills around Loch Coruisk. Photo by James Stringer on <a href="https://flic.kr/p/VPEdr7" target="_blank">Flickr</a>.
         </div>
 
@@ -101,7 +101,7 @@
         <p>South of Waternish you'll reach Dunvegan, a settlement notable as the site of the oldest continuously inhabited castle in Scotland. Built on a rocky outcrop in Loch Dunvegan, the clan seat of the MacLeods is one of the island's major attractions.</p>
 
         <div class="image-container">
-          <a href="https://flic.kr/p/nRTadf" target="_blank"><img src="/img/story5.jpg"></a>
+          <a href="https://flic.kr/p/nRTadf" target="_blank"><img src="img/story5.jpg"></a>
           Dunvegan Castle. Photo by Antonio Cinotti on <a href="https://flic.kr/p/nRTadf" target="_blank">Flickr</a>.
         </div>
 
@@ -119,11 +119,11 @@
 
         <div class="row">
           <div class="image-container col-md-6">
-            <a href="https://flic.kr/p/VB5pKJ" target="_blank"><img src="/img/story6.jpg"></a>
+            <a href="https://flic.kr/p/VB5pKJ" target="_blank"><img src="img/story6.jpg"></a>
             The town of Portree. Photo by Marc Dittrich on <a href="https://flic.kr/p/VB5pKJ" target="_blank">Flickr</a>.
           </div>
           <div class="image-container col-md-6">
-            <a href="https://flic.kr/p/8hJ4d5" target="_blank"><img src="/img/story7.jpg"></a>
+            <a href="https://flic.kr/p/8hJ4d5" target="_blank"><img src="img/story7.jpg"></a>
             A lighthouse on the coast of Sleat. Photo by Tom Parnell on <a href="https://flic.kr/p/8hJ4d5" target="_blank">Flickr</a>.
           </div>
         </div>
