--- a/skye/index.html
+++ b/skye/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <img id="parallax" src="img/header.jpg"/>
+    <img id="parallax" src="img/header.jpg">
     <header id="header" class="clearfix">
       <h1 class="title">The Isle of Skye</h1>
       <nav class="menu">
@@ -15,7 +15,7 @@
           <a class="credit float-left" href="https://flic.kr/p/o2oBNq">
             Photo by Michael Ebner on Flickr
           </a>
-          <ul class="nav nav-pills float-right">
+          <ul class="nav float-md-right">
             <span class="nav-title">Other Sites:</span>
             <li class="nav-item">
               <a class="nav-link" href="http://peytonchance.com/mj487/quito/">Quito</a>
