icon fonts, top bar

--- a/project1/index.html
+++ b/project1/index.html
@@ -3,13 +3,14 @@
 <head>
   <title>Dashboard - Mini of Raleigh</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/icons.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header class="top-bar">
-    <span class="top-bar-name"></span>
-    <span class="top-bar-help"></span>
-    <span class="top-bar-settigs"></span>
+  <header class="top-bar clearfix">
+    <a href="#" class="top-bar-icon i-settings"></a>
+    <a href="#" class="top-bar-icon i-help"></a>
+    <a href="#" class="top-bar-name">MINI of Raleigh</a>
   </header>
   <nav class="main-nav">
     <div class="main-nav-background b-stripes"></div>
