--- a/project1/index.html
+++ b/project1/index.html
@@ -8,20 +8,25 @@
 </head>
 <body>
   <header class="top-bar clearfix">
-    <a href="#" class="top-bar-icon i-settings"></a>
-    <a href="#" class="top-bar-icon i-help"></a>
-    <a href="#" class="top-bar-name">MINI of Raleigh</a>
+    <div class="container">
+      <a href="#" class="top-bar-icon i-settings"></a>
+      <a href="#" class="top-bar-icon i-help"></a>
+      <a href="#" class="top-bar-name">MINI of Raleigh</a>
+    </div>
   </header>
   <nav class="main-nav">
     <div class="main-nav-background b-stripes"></div>
     <div class="main-nav-background b-shadows"></div>
-    <div class="main-nav-background b-fades"></div>
-    <span class="main-nav-icon i-dashboard"></span>
-    <span class="main-nav-icon i-customers"></span>
-    <span class="main-nav-icon i-messages"></span>
-    <span class="main-nav-icon i-promotions"></span>
-    <span class="main-nav-icon i-pages"></span>
-    <span class="main-nav-icon i-analytics"></span>
+    <div class="main-nav-fade f-left"></div>
+    <ul class="main-nav-icons">
+      <li class="i-dashboard selected"></li>
+      <li class="i-customers"></li>
+      <li class="i-messages"></li>
+      <li class="i-promotions"></li>
+      <li class="i-pages"></li>
+      <li class="i-analytics"></li>
+    </ul>
+    <div class="main-nav-fade f-right"></div>
   </nav>
   <div class="main-page">
     <header class="page-header">
