--- a/project1/index.html
+++ b/project1/index.html
@@ -39,22 +39,107 @@
     </header>
     <div class="gradient-border">
       <div class="page-inner">
-        <section class="announcements">
-          <div class="announcements-title"></div>
-          <div class="announcements-text"></div>
-          <div class="announcements-buttons"></div>
+        <section class="announcements bottom-shadow">
+          <div class="announcements-title">ANNOUNCEMENTS</div>
+          <div class="announcements-text">Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus</div>
+          <div class="announcements-buttons">
+            <div class="centered">
+              <a href="#" class="i-caret-left"></a>
+              <a href="#" class="i-caret-right"></a>
+            </div>
+          </div>
         </section>
         <div class="main-column-left">
-          <section class="tasks">
-            
+          <section class="tasks bottom-shadow">
+            <h3 class="section-title">Tasks</h3>
+            <a href="#" class="i-settings"></a>
+            <ol class="task-list">
+              <li class="task-item disabled">
+                Welcome Contacts
+                <button class="i-person">32</button>
+              </li>
+              <li class="task-item">
+                Provide Responses
+                <button class="i-person">36</button>
+              </li>
+              <li class="task-item">
+                Review Activity
+                <button class="i-person">36</button>
+              </li>
+              <li class="task-item">
+                Reach Out
+                <button class="i-person">3</button>
+              </li>
+            </ol>
           </section>
           <section class="recommendations">
-
+            <h3 class="section-title">Recommendations</h3>
+            <ul class="recommendations-list">
+              <li class="i-article">7 Steps to getting more Fans</li>
+              <li class="i-article">Increase traction with more interactions</li>
+              <li class="i-check">Creating a Promotion</li>
+              <li class="i-tip">Share More</li>
+            </ul>
           </section>
         </div>
         <div class="main-column-right">
-          <section class="analytics">
-
+          <section class="analytics bottom-shadow">
+            <h3 class="section-title">Analytics</h3>
+            <div class="analytics-columns">
+              <div class="analytics-activity">
+                <h6 class="subtitle">Activity</h6>
+                <div class="activity-select">
+                  <select class="custom-select form-control">
+                    <option selected>06/28/11 - 07/21/11</option>
+                    <option>05/27/11 - 06/28/11</option>
+                    <option>06/28/11 - 07/21/11</option>
+                    <option>06/28/11 - 07/21/11</option>
+                  </select>
+                  <i class="i-caret-left"></i>
+                </div>
+                <img class="activity-graph" src="img/graph.png" alt="Activity Graph"/>
+              </div>
+              <div class="analytics-pies">
+                <div class="pie-chart">
+                  <h6 class="subtitle">Channels</h6>
+                  <img src="img/pie1.svg" alt="Channels">
+                </div>
+                <div class="pie-chart">
+                  <h6 class="subtitle">Referrals</h6>
+                  <img src="img/pie2.svg" alt="Referrals">
+                </div>
+              </div>
+            </div>
+            <div class="analytics-checkboxes">
+              <div class="analytics-checkbox">
+                <div class="checkbox-container">
+                  <input type="checkbox" checked>
+                  <div class="custom-checkbox i-check"></div>
+                </div>
+                <label class="l-facebook">Facebook</label>
+              </div>
+              <div class="analytics-checkbox">
+                <div class="checkbox-container">
+                  <input type="checkbox" checked>
+                  <div class="custom-checkbox i-check"></div>
+                </div>
+                <label class="l-twitter">Twitter</label>
+              </div>
+              <div class="analytics-checkbox">
+                <div class="checkbox-container">
+                  <input type="checkbox">
+                  <div class="custom-checkbox i-check"></div>
+                </div>
+                <label class="l-foursquare">Foursquare</label>
+              </div>
+              <div class="analytics-checkbox">
+                <div class="checkbox-container">
+                  <input type="checkbox">
+                  <div class="custom-checkbox i-check"></div>
+                </div>
+                <label class="l-googleplus">Google+</label>
+              </div>
+            </div>
           </section>
           <section class="counts">
 
