--- a/project1/index.html
+++ b/project1/index.html
@@ -141,33 +141,76 @@
               </div>
             </div>
           </section>
-          <section class="counts">
-
+          <section class="counts bottom-shadow">
+            <div class="count-card contacts">
+              <div class="i-person green"></div>
+              <div class="ribbon">
+                <h4>75 Contacts</h4>
+                <h5>4 Influencers</h5>
+              </div>
+              <img src="img/contacts-chart.png" alt="Contacts" width="182" height="92">
+            </div>
+            <div class="count-card customers">
+              <div class="i-person orange"></div>
+              <div class="ribbon">
+                <h4>17 Customers</h4>
+                <h5>0 Influencers</h5>
+              </div>
+              <img src="img/customers-chart.png" alt="Contacts" width="182" height="92">
+            </div>
           </section>
           <section class="quote">
-            <div class="quote-container">
-              <div class="quote-button-left">
+            <div class="quote-box">
+              <div class="quote-arrow i-caret-left">
               </div>
               <div class="quote-content">
+                <h6>Did you know?</h6>
+                <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porta sem malesuada magna mollis euismod.</p>
               </div>
-              <div class="quote-buttom-right">
+              <div class="quote-arrow i-caret-right">
               </div>
             </div>
           </section>
         </div>
         <section class="features">
-          <div class="feature-left">
+          <div class="feature-card left">
+            <img src="img/feature-left.png" width="262" height="150" alt="Watch what you say. Message Management" />
           </div>
-          <div class="feature-center">
+          <div class="feature-card center">
+            <img src="img/feature-center.png" width="268" height="171" alt="See what others are doing with us" />
           </div>
-          <div class="feature-right">
+          <div class="feature-card right">
+            <img src="img/feature-right.png" width="263" height="160" alt="Version 2.0 is coming"/>
           </div>
         </section>
       </div>
     </div>
   </div>
-  <footer class="bottom-bar"></footer>
-  
+  <footer class="bottom-bar">
+    <div class="container">
+      <div class="bottom-links">
+        <a href="#">Tutorials</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+      </div>
+      <div class="bottom-notif">
+        <p><a href="#">Ariel Winter</a> likes your <a href="#">Win A Cooper Sweepstakes</a> Promotion.</p>
+        <a href="#" class="i-caret-right"></a>
+      </div>
+      <div class="bottom-logout">
+        <div class="avatar-container">
+          <img src="img/avatar.jpg" width="30" height="30" />
+        </div>
+        <a href="#">Logout</a>
+      </div>
+      <div class="bottom-social">
+        <a href="#" class="s-facebook"></a>
+        <a href="#" class="s-twitter"></a>
+        <a href="#" class="s-foursquare"></a>
+        <a href="#" class="s-youtube"></a>
+      </div>
+    </div>
+  </footer>
   <script type="text/javascript">
     var CARET_WIDTH = document.querySelector('.main-nav-caret').getBoundingClientRect().width;
 
