--- a/project1/index.html
+++ b/project1/index.html
@@ -40,7 +40,7 @@
     <div class="gradient-border">
       <div class="page-inner">
         <section class="announcements bottom-shadow">
-          <div class="announcements-title">ANNOUNCEMENTS</div>
+          <div class="announcements-title">Announcements</div>
           <div class="announcements-text">Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus</div>
           <div class="announcements-buttons">
             <div class="centered">
@@ -49,128 +49,130 @@
             </div>
           </div>
         </section>
-        <div class="main-column-left">
-          <section class="tasks bottom-shadow">
-            <h3 class="section-title">Tasks</h3>
-            <a href="#" class="i-settings"></a>
-            <ol class="task-list">
-              <li class="task-item disabled">
-                Welcome Contacts
-                <button class="i-person">32</button>
-              </li>
-              <li class="task-item">
-                Provide Responses
-                <button class="i-person">36</button>
-              </li>
-              <li class="task-item">
-                Review Activity
-                <button class="i-person">36</button>
-              </li>
-              <li class="task-item">
-                Reach Out
-                <button class="i-person">3</button>
-              </li>
-            </ol>
-          </section>
-          <section class="recommendations">
-            <h3 class="section-title">Recommendations</h3>
-            <ul class="recommendations-list">
-              <li class="i-article">7 Steps to getting more Fans</li>
-              <li class="i-article">Increase traction with more interactions</li>
-              <li class="i-check">Creating a Promotion</li>
-              <li class="i-tip">Share More</li>
-            </ul>
-          </section>
-        </div>
-        <div class="main-column-right">
-          <section class="analytics bottom-shadow">
-            <h3 class="section-title">Analytics</h3>
-            <div class="analytics-columns">
-              <div class="analytics-activity">
-                <h6 class="subtitle">Activity</h6>
-                <div class="activity-select">
-                  <select class="custom-select form-control">
-                    <option selected>06/28/11 - 07/21/11</option>
-                    <option>05/27/11 - 06/28/11</option>
-                    <option>06/28/11 - 07/21/11</option>
-                    <option>06/28/11 - 07/21/11</option>
-                  </select>
-                  <i class="i-caret-left"></i>
+        <div class="main-columns">
+          <div class="main-column-left">
+            <section class="tasks bottom-shadow">
+              <h3 class="section-title">Tasks</h3>
+              <a href="#" class="i-settings"></a>
+              <ol class="task-list">
+                <li class="task-item disabled">
+                  Welcome Contacts
+                  <button class="i-person">32</button>
+                </li>
+                <li class="task-item">
+                  Provide Responses
+                  <button class="i-person">36</button>
+                </li>
+                <li class="task-item">
+                  Review Activity
+                  <button class="i-person">36</button>
+                </li>
+                <li class="task-item">
+                  Reach Out
+                  <button class="i-person">3</button>
+                </li>
+              </ol>
+            </section>
+            <section class="recommendations">
+              <h3 class="section-title">Recommendations</h3>
+              <ul class="recommendations-list">
+                <li class="i-article">7 Steps to getting more Fans</li>
+                <li class="i-article">Increase traction with more interactions</li>
+                <li class="i-check">Creating a Promotion</li>
+                <li class="i-tip">Share More</li>
+              </ul>
+            </section>
+          </div>
+          <div class="main-column-right">
+            <section class="analytics bottom-shadow">
+              <h3 class="section-title">Analytics</h3>
+              <div class="analytics-columns">
+                <div class="analytics-activity">
+                  <h6 class="subtitle">Activity</h6>
+                  <div class="activity-select">
+                    <select class="custom-select form-control">
+                      <option selected>06/28/11 - 07/21/11</option>
+                      <option>05/27/11 - 06/28/11</option>
+                      <option>06/28/11 - 07/21/11</option>
+                      <option>06/28/11 - 07/21/11</option>
+                    </select>
+                    <i class="i-caret-left"></i>
+                  </div>
+                  <img class="activity-graph" src="img/graph.png" alt="Activity Graph"/>
                 </div>
-                <img class="activity-graph" src="img/graph.png" alt="Activity Graph"/>
-              </div>
-              <div class="analytics-pies">
-                <div class="pie-chart">
-                  <h6 class="subtitle">Channels</h6>
-                  <img src="img/pie1.svg" alt="Channels">
+                <div class="analytics-pies">
+                  <div class="pie-chart">
+                    <h6 class="subtitle">Channels</h6>
+                    <img src="img/pie1.svg" alt="Channels">
+                  </div>
+                  <div class="pie-chart">
+                    <h6 class="subtitle">Referrals</h6>
+                    <img src="img/pie2.svg" alt="Referrals">
+                  </div>
                 </div>
-                <div class="pie-chart">
-                  <h6 class="subtitle">Referrals</h6>
-                  <img src="img/pie2.svg" alt="Referrals">
+              </div>
+              <div class="analytics-checkboxes">
+                <div class="analytics-checkbox">
+                  <div class="checkbox-container">
+                    <input type="checkbox" checked>
+                    <div class="custom-checkbox i-check"></div>
+                  </div>
+                  <label class="l-facebook">Facebook</label>
+                </div>
+                <div class="analytics-checkbox">
+                  <div class="checkbox-container">
+                    <input type="checkbox" checked>
+                    <div class="custom-checkbox i-check"></div>
+                  </div>
+                  <label class="l-twitter">Twitter</label>
+                </div>
+                <div class="analytics-checkbox">
+                  <div class="checkbox-container">
+                    <input type="checkbox">
+                    <div class="custom-checkbox i-check"></div>
+                  </div>
+                  <label class="l-foursquare">Foursquare</label>
+                </div>
+                <div class="analytics-checkbox">
+                  <div class="checkbox-container">
+                    <input type="checkbox">
+                    <div class="custom-checkbox i-check"></div>
+                  </div>
+                  <label class="l-googleplus">Google+</label>
                 </div>
               </div>
-            </div>
-            <div class="analytics-checkboxes">
-              <div class="analytics-checkbox">
-                <div class="checkbox-container">
-                  <input type="checkbox" checked>
-                  <div class="custom-checkbox i-check"></div>
+            </section>
+            <section class="counts bottom-shadow">
+              <div class="count-card contacts">
+                <div class="i-person green"></div>
+                <div class="ribbon">
+                  <h4>75 Contacts</h4>
+                  <h5>4 Influencers</h5>
                 </div>
-                <label class="l-facebook">Facebook</label>
+                <img src="img/contacts-chart.png" alt="Contacts" width="182" height="92">
               </div>
-              <div class="analytics-checkbox">
-                <div class="checkbox-container">
-                  <input type="checkbox" checked>
-                  <div class="custom-checkbox i-check"></div>
+              <div class="count-card customers">
+                <div class="i-person orange"></div>
+                <div class="ribbon">
+                  <h4>17 Customers</h4>
+                  <h5>0 Influencers</h5>
                 </div>
-                <label class="l-twitter">Twitter</label>
+                <img src="img/customers-chart.png" alt="Contacts" width="182" height="92">
               </div>
-              <div class="analytics-checkbox">
-                <div class="checkbox-container">
-                  <input type="checkbox">
-                  <div class="custom-checkbox i-check"></div>
+            </section>
+            <section class="quote">
+              <div class="quote-box">
+                <div class="quote-arrow i-caret-left">
                 </div>
-                <label class="l-foursquare">Foursquare</label>
-              </div>
-              <div class="analytics-checkbox">
-                <div class="checkbox-container">
-                  <input type="checkbox">
-                  <div class="custom-checkbox i-check"></div>
+                <div class="quote-content">
+                  <h6>Did you know?</h6>
+                  <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porta sem malesuada magna mollis euismod.</p>
                 </div>
-                <label class="l-googleplus">Google+</label>
+                <div class="quote-arrow i-caret-right">
+                </div>
               </div>
-            </div>
-          </section>
-          <section class="counts bottom-shadow">
-            <div class="count-card contacts">
-              <div class="i-person green"></div>
-              <div class="ribbon">
-                <h4>75 Contacts</h4>
-                <h5>4 Influencers</h5>
-              </div>
-              <img src="img/contacts-chart.png" alt="Contacts" width="182" height="92">
-            </div>
-            <div class="count-card customers">
-              <div class="i-person orange"></div>
-              <div class="ribbon">
-                <h4>17 Customers</h4>
-                <h5>0 Influencers</h5>
-              </div>
-              <img src="img/customers-chart.png" alt="Contacts" width="182" height="92">
-            </div>
-          </section>
-          <section class="quote">
-            <div class="quote-box">
-              <div class="quote-arrow i-caret-left">
-              </div>
-              <div class="quote-content">
-                <h6>Did you know?</h6>
-                <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porta sem malesuada magna mollis euismod.</p>
-              </div>
-              <div class="quote-arrow i-caret-right">
-              </div>
-            </div>
-          </section>
+            </section>
+          </div>
         </div>
         <section class="features">
           <div class="feature-card left">
