--- a/project1/index.html
+++ b/project1/index.html
@@ -40,7 +40,7 @@
     <div class="gradient-border">
       <div class="page-inner">
         <section class="announcements bottom-shadow">
-          <div class="announcements-title">Announcements</div>
+          <h6 class="announcements-title">Announcements</h6>
           <div class="announcements-text">Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sagittis lacus</div>
           <div class="announcements-buttons">
             <div class="centered">
@@ -201,7 +201,7 @@
       </div>
       <div class="bottom-logout">
         <div class="avatar-container">
-          <img src="img/avatar.jpg" width="30" height="30" />
+          <img src="img/avatar.jpg" width="30" height="30" alt="Mini of Raleigh"/>
         </div>
         <a href="#">Logout</a>
       </div>
