--- a/amazon/index.html
+++ b/amazon/index.html
@@ -80,7 +80,7 @@
       <div class="slide outside-1">
         <img class="plane" src="img/plane.png" alt="Plane" />
         <div class="slide-inner">
-          <p>The trucks then hit the road to travel across the country. Some packages will make their way onto Fedex and UPS planes, others will go onto Amazon's own fleet of "Prime Air" jets, which they started using this year.</p>
+          <p>The trucks then hit the road to travel across the country. Some packages will make their way onto Fedex and UPS planes, others will go onto Amazon's own fleet of "Prime Air" jets, which they started using this year. Amazon has also been testing their own fleet of container ships for storing and moving inventory around the globe.</p>
         </div>
       </div>
       <div class="slide outside-2">
@@ -96,18 +96,9 @@
       </div>
     </section>
     <section class="quiz">
-      <div class="slide quiz-1">
-        <div class="quiz-page" data-page="1">
-          <h2>Think you understand Amazon's logistics now?</h2>
-          <button class="next">Start Quiz</button>
-        </div>
-        <div class="quiz-page" data-page="2">
-        </div>
-        <div class="quiz-page" data-page="3">
-        </div>
-        <div class="quiz-page" data-page="4">
-        </div>
+      <div id="quiz-container">
       </div>
+      <button class="next next-bottom hidden">Next Question ></button>
     </section>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -115,6 +106,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+    <script src="js/motherjones_quiz.js"></script>
     <script src="js/story.js"></script>
   </body>
 </html>
