--- a/amazon/index.html
+++ b/amazon/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>The Life of an Amazon Order</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Serif|Quattrocento+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="css/jquery_modal.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
@@ -87,12 +88,14 @@
         <div class="regional-center">
           <img  src="img/regional-center.svg" alt="Regional Center" />
         </div>
-        <img class="house" src="img/house.svg" alt="House"/>
         <img class="drone" src="img/drone.svg" alt="Drone"/>
         <img class="drone-box" src="img/box-labeled.svg" alt="Drone Box" />
         <div class="slide-inner">
           <p>Packages are then sent to a regional sorting center, where they are put on trucks for home delivery. Amazon is also developing it's own fleet of drones to complete this "last-mile" delivery, and is already using it in some regions of the UK. This entire process - from order to delivery - can take as little as 8 hours, and nearly every package can be delivered anywhere in the US in two days. This feat of logistics is only made possible by Amazon's massive scale, which continues to build their domination of modern retail.</p>
         </div>
+      </div>
+      <div class="house-container">
+        <img class="house" src="img/house.svg" alt="House"/>
       </div>
     </section>
     <section class="quiz">
@@ -100,12 +103,25 @@
       </div>
       <button class="next next-bottom hidden">Next Question ></button>
     </section>
-
+    <footer>
+      <div id="credits">
+        Airplane graphic designed by <a href="http://www.freepik.com/free-vector/airplane-in-top-view_796457.htm">Freepik</a>.
+        <br>
+        Freight truck graphic designed by <a href="https://www.vecteezy.com/vector-art/89181-freight-trucks-aerial-view-set">Vecteezy</a>.
+        <br>
+        House graphic designed by <a href="http://www.peecheey.com/houses-flat-design/">Peecheey</a>.
+        <br>
+        Laptop graphic designed by <a href="http://vector4free.com/vector/free-vector-flat-idevice-icons/">MarinaD on Vector4free</a>.
+      </div>
+      Built in Fall 2017 by <a href="/" target="_blank">Peter Andringa</a> for Steven King's MEJO 487 class. 
+      <a href="#credits" rel="modal:open">(Credits)</a>
+    </footer>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
+    <script src="js/jquery_modal.min.js"></script>
     <script src="js/motherjones_quiz.js"></script>
     <script src="js/story.js"></script>
   </body>
