clean up mobile css

--- a/amazon/index.html
+++ b/amazon/index.html
@@ -9,14 +9,14 @@
   <body>
     <section id="home">
       <div class="slide home-1">
-        <img class="cloud cloud-1" src="img/cloud1.svg" alt="Cloud"/>
-        <img class="cloud cloud-2" src="img/cloud1.svg" alt="Cloud"/>
-        <img class="cloud cloud-3" src="img/cloud2.svg" alt="Cloud"/>
-        <img class="cloud cloud-4" src="img/cloud4.svg" alt="Cloud"/>
-        <img class="cloud cloud-5" src="img/cloud3.svg" alt="Cloud"/>
-        <img class="cloud cloud-6" src="img/cloud3.svg" alt="Cloud"/>
-        <img class="cloud cloud-7" src="img/cloud2.svg" alt="Cloud"/>
-        <img class="ground" src="img/ground.svg" alt="Ground"/>
+        <img class="cloud cloud-1 hide-mobile" src="img/cloud1.svg" alt="Cloud"/>
+        <img class="cloud cloud-2 hide-mobile" src="img/cloud1.svg" alt="Cloud"/>
+        <img class="cloud cloud-3 hide-mobile" src="img/cloud2.svg" alt="Cloud"/>
+        <img class="cloud cloud-4 hide-mobile" src="img/cloud4.svg" alt="Cloud"/>
+        <img class="cloud cloud-5 hide-mobile" src="img/cloud3.svg" alt="Cloud"/>
+        <img class="cloud cloud-6 hide-mobile" src="img/cloud3.svg" alt="Cloud"/>
+        <img class="cloud cloud-7 hide-mobile" src="img/cloud2.svg" alt="Cloud"/>
+        <img class="ground hide-mobile" src="img/ground.svg" alt="Ground"/>
         <img class="laptop" src="img/laptop.svg" alt="Laptop"/>
         <div class="slide-inner">
           <h1>The Life of an <b>Amazon</b> Order</h1>
@@ -26,15 +26,15 @@
         </div>
       </div>
       <div class="slide home-2">
-        <img class="server" src="img/server.svg" alt="Server"/>
-        <img class="arrow" src="img/arrow.svg" alt="Arrow"/>
+        <img class="server hide-mobile" src="img/server.svg" alt="Server"/>
+        <img class="arrow hide-mobile" src="img/arrow.svg" alt="Arrow"/>
         <div class="slide-inner">
           <p>Once you click the magical "place order" button from your laptop, phone, iPad, or dash button, your order information is instaneously sent to Amazon's global network of servers in the cloud. The company owns more than <b>6 million servers</b> in more than <b>68 data centers</b> spread across the world. They use some of this capacity to power their own operations, but they also rent the computing power to other companies through their <b>Amazon Web Services</b> division, which takes in more than $15 billion each year.</p>
         </div>
       </div>
       <div class="slide home-3">
-        <img class="fufillment-center" src="img/fufillment-center.svg" alt="Fufillment Center" />
-        <img class="fufillment-arrow" src="img/arrow.svg" alt="Arrow"/>
+        <img class="fufillment-center hide-mobile" src="img/fufillment-center.svg" alt="Fufillment Center" />
+        <img class="fufillment-arrow hide-mobile" src="img/arrow.svg" alt="Arrow"/>
         <div class="slide-inner">
           <p>In seconds, Amazon's cloud routes your order to one of their many 'Fufillment Centers': hyper-effecient warehouses built by Amazon around the globe. As of January 2017, Amazon had more than <b>90 fufillment centers</b> in the US, and dozens more internationally. These facilities are massive: many are <b>more than 1 million square feet</b>, giving Amazon room to store the <b>372 million products they offer in their marketplace</b>.</p>
         </div>
@@ -46,7 +46,7 @@
         <img class="shelves" src="img/shelves.svg" alt="Shelves"/>
         <img class="single-shelf" src="img/shelf-mounted.svg" alt="Single Shelf"/>
         <div class="slide-inner">
-          <p>Less than a minute after placing your order, once of Amazon's "Kiva" robots whirs to life to retrieve your items. Amazon's warehouses are filled with thousands of tall shelving units, packed close together and in seemingly random order. These shelving units contain an assortment of items, all mixed together to ensure that a given product is spread throughout the warehouse. Amazon's fleet of more than <b>45,000 robots</b> knows which shelf each item is on, and one of them will navigate to the particular shelf and pick up the entire tower of shelves. This allows Amazon to store far more products than in a traditional warehouse, because it doesn't require the humans to walk around.</p>
+          <p>Less than a minute after placing your order, one of Amazon's "Kiva" robots whirs to life to retrieve your items. Amazon's warehouses are filled with thousands of tall shelving units, packed close together and in seemingly random order. These shelving units contain an assortment of items, all mixed together to ensure that a given product is spread throughout the warehouse. Amazon's fleet of more than <b>45,000 robots</b> knows which shelf each item is on, and one of them will navigate to the particular shelf and pick up the entire tower of shelves. This allows Amazon to store far more products than in a traditional warehouse, because it doesn't require the humans to walk around.</p>
         </div>
       </div>
       <div class="slide warehouse-2">
@@ -62,7 +62,7 @@
           <img class="box-state labeled" src="img/box-labeled.svg" alt="Open Box"/>
         </div>
         <div class="slide-inner">
-          <p>That box then makes its way down a series of conveyor belts until it arrives at a packing station with a waiting employee. There, the system tells the employee which type of box to use and cuts off exact lengths of tape and packaging filler, for the employee to pack the item. Once the item is safe in a box, a large machine stamps it with a shipping label and sends it off to the shipping bays.</p>
+          <p>That bin then makes its way down a series of conveyor belts until it arrives at a packing station with a waiting employee. There, the system tells the employee which type of box to use and cuts off exact lengths of tape and packaging filler, for the employee to pack the item. Once the item is safe in a box, a large machine stamps it with a shipping label and sends it off to the shipping bays.</p>
         </div>
       </div>
       <div class="slide warehouse-4">
@@ -77,7 +77,9 @@
       </div>
     </section>
     <section id="outside">
-      <div class="road"></div>
+      <div class="road">
+        <img class="truck-mobile show-mobile" src="img/truck.svg" alt="Truck" />
+      </div>
       <div class="slide outside-1">
         <img class="plane" src="img/plane.png" alt="Plane" />
         <div class="slide-inner">
@@ -86,7 +88,7 @@
       </div>
       <div class="slide outside-2">
         <div class="regional-center">
-          <img  src="img/regional-center.svg" alt="Regional Center" />
+          <img src="img/regional-center.svg" alt="Regional Center" />
         </div>
         <img class="drone" src="img/drone.svg" alt="Drone"/>
         <img class="drone-box" src="img/box-labeled.svg" alt="Drone Box" />
