--- a/amazon/index.html
+++ b/amazon/index.html
@@ -17,7 +17,13 @@
         <img class="cloud cloud-6 hide-mobile" src="img/cloud3.svg" alt="Cloud"/>
         <img class="cloud cloud-7 hide-mobile" src="img/cloud2.svg" alt="Cloud"/>
         <img class="ground hide-mobile" src="img/ground.svg" alt="Ground"/>
-        <img class="laptop" src="img/laptop.svg" alt="Laptop"/>
+        <div class="laptop">
+          <img src="img/laptop.svg" alt="Laptop"/>
+          <div class="screen">
+            <img class="homepage" src="img/homepage.png" alt="Amazon.com"/>
+            <img class="checkout" src="img/checkout.png" alt="Amazon Checkout"/>
+          </div>
+        </div>
         <div class="slide-inner">
           <h1>The Life of an <b>Amazon</b> Order</h1>
           <h4>By Peter Andringa</h4>
