credit checkout screenshot

--- a/amazon/index.html
+++ b/amazon/index.html
@@ -113,13 +113,15 @@
     </section>
     <footer>
       <div id="credits">
-        Airplane graphic designed by <a href="http://www.freepik.com/free-vector/airplane-in-top-view_796457.htm">Freepik</a>.
+        Amazon screenshot from the <a href="https://baymard.com/checkout-usability/benchmark/top-100/73-amazon" target="_blank">Baymard Institute</a>.
         <br>
-        Freight truck graphic designed by <a href="https://www.vecteezy.com/vector-art/89181-freight-trucks-aerial-view-set">Vecteezy</a>.
+        Airplane graphic designed by <a href="http://www.freepik.com/free-vector/airplane-in-top-view_796457.htm" target="_blank">Freepik</a>.
         <br>
-        House graphic designed by <a href="http://www.peecheey.com/houses-flat-design/">Peecheey</a>.
+        Freight truck graphic designed by <a href="https://www.vecteezy.com/vector-art/89181-freight-trucks-aerial-view-set" target="_blank">Vecteezy</a>.
         <br>
-        Laptop graphic designed by <a href="http://vector4free.com/vector/free-vector-flat-idevice-icons/">MarinaD on Vector4free</a>.
+        House graphic designed by <a href="http://www.peecheey.com/houses-flat-design/" target="_blank">Peecheey</a>.
+        <br>
+        Laptop graphic designed by <a href="http://vector4free.com/vector/free-vector-flat-idevice-icons/" target="_blank">MarinaD on Vector4free</a>.
       </div>
       Built in Fall 2017 by <a href="/" target="_blank">Peter Andringa</a> for Steven King's MEJO 487 class. 
       <a href="#credits" rel="modal:open">(Credits)</a>
