update credits with libraries

--- a/amazon/index.html
+++ b/amazon/index.html
@@ -122,6 +122,15 @@
         House graphic designed by <a href="http://www.peecheey.com/houses-flat-design/" target="_blank">Peecheey</a>.
         <br>
         Laptop graphic designed by <a href="http://vector4free.com/vector/free-vector-flat-idevice-icons/" target="_blank">MarinaD on Vector4free</a>.
+        <br>
+        <br>
+        Animations powered by <a href="http://greensock.com" target="_blank">GSAP</a>.
+        <br>
+        Scrolling powered by <a href="http://scrollmagic.io" target="_blank">ScrollMagic</a>.
+        <br>
+        Quiz powered by <a href="https://github.com/motherjones/newsquiz" target="_blank">Mother Jones Newsquiz</a>.
+        <br>
+        Modals powered by <a href="http://github.com/kylefox/jquery-modal" target="_blank">jQuery Modal</a>.
       </div>
       Built in Fall 2017 by <a href="/" target="_blank">Peter Andringa</a> for Steven King's MEJO 487 class. 
       <a href="#credits" rel="modal:open">(Credits)</a>
