--- a/amazon/index.html
+++ b/amazon/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <title>The Life of an Amazon Order</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Serif|Quattrocento+Sans" rel="stylesheet">
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="slide home-2">
-        <img class="server hide-mobile" src="img/server.svg" alt="Server"/>
+        <img class="server" src="img/server.svg" alt="Server"/>
         <img class="arrow hide-mobile" src="img/arrow.svg" alt="Arrow"/>
         <div class="slide-inner">
           <p>Once you click the magical "place order" button from your laptop, phone, iPad, or dash button, your order information is instaneously sent to Amazon's global network of servers in the cloud. The company owns more than <b>6 million servers</b> in more than <b>68 data centers</b> spread across the world. They use some of this capacity to power their own operations, but they also rent the computing power to other companies through their <b>Amazon Web Services</b> division, which takes in more than $15 billion each year.</p>
@@ -106,7 +106,7 @@
         <img class="house" src="img/house.svg" alt="House"/>
       </div>
     </section>
-    <section class="quiz">
+    <section id="quiz">
       <div id="quiz-container">
       </div>
       <button class="next next-bottom hidden">Next Question ></button>
