--- a/amazon/index.html
+++ b/amazon/index.html
@@ -33,6 +33,11 @@
       </div>
       <div class="slide home-2">
         <img class="server" src="img/server.svg" alt="Server"/>
+        <img class="cloud cloud-1 show-mobile" src="img/cloud1.svg" alt="Cloud"/>
+        <img class="cloud cloud-2 show-mobile" src="img/cloud1.svg" alt="Cloud"/>
+        <img class="cloud cloud-3 show-mobile" src="img/cloud2.svg" alt="Cloud"/>
+        <img class="cloud cloud-4 show-mobile" src="img/cloud4.svg" alt="Cloud"/>
+        <img class="cloud cloud-5 show-mobile" src="img/cloud3.svg" alt="Cloud"/>
         <img class="arrow hide-mobile" src="img/arrow.svg" alt="Arrow"/>
         <div class="slide-inner">
           <p>Once you click the magical "place order" button from your laptop, phone, iPad, or dash button, your order information is instaneously sent to Amazon's global network of servers in the cloud. The company owns more than <b>6 million servers</b> in more than <b>68 data centers</b> spread across the world. They use some of this capacity to power their own operations, but they also rent the computing power to other companies through their <b>Amazon Web Services</b> division, which takes in more than $15 billion each year.</p>
@@ -40,7 +45,9 @@
       </div>
       <div class="slide home-3">
         <img class="fufillment-center hide-mobile" src="img/fufillment-center.svg" alt="Fufillment Center" />
-        <img class="fufillment-arrow hide-mobile" src="img/arrow.svg" alt="Arrow"/>
+        <img class="server show-mobile" src="img/server.svg" alt="Server" />
+        <img class="fufillment-arrow" src="img/arrow.svg" alt="Arrow"/>
+        <img class="fufillment-center-mobile show-mobile" src="img/fufillment-center-mobile.svg" alt="Fufillment Center" />
         <div class="slide-inner">
           <p>In seconds, Amazon's cloud routes your order to one of their many 'Fufillment Centers': hyper-effecient warehouses built by Amazon around the globe. As of January 2017, Amazon had more than <b>90 fufillment centers</b> in the US, and dozens more internationally. These facilities are massive: many are <b>more than 1 million square feet</b>, giving Amazon room to store the <b>372 million products they offer in their marketplace</b>.</p>
         </div>
@@ -93,6 +100,7 @@
         </div>
       </div>
       <div class="slide outside-2">
+        <img class="truck-mobile show-mobile" src="img/truck.svg" alt="Truck" />
         <div class="regional-center">
           <img src="img/regional-center.svg" alt="Regional Center" />
         </div>
@@ -103,6 +111,8 @@
         </div>
       </div>
       <div class="house-container">
+        <img class="drone show-mobile" src="img/drone.svg" alt="Drone"/>
+        <img class="drone-box show-mobile" src="img/box-labeled.svg" alt="Drone Box" />
         <img class="house" src="img/house.svg" alt="House"/>
       </div>
     </section>
@@ -138,7 +148,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>-->
+    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script> -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
     <script src="js/jquery_modal.min.js"></script>
     <script src="js/motherjones_quiz.js"></script>
