--- a/amazon/index.html
+++ b/amazon/index.html
@@ -28,7 +28,7 @@
           <h1>The Life of an <b>Amazon</b> Order</h1>
           <h4>By Peter Andringa</h4>
           <br>
-          <p>Few things in modern life are as magical as Amazon's national logistics network. A click of a digital button, combined with cutting-edge technology and a billion-dollar infrastructure can deliver almost anything to your doorstep in two days, if not 8 hours. Few, however, know exactly what happens to make this magic possible.</p>
+          <p>Few things in the modern world are as magical as Amazon's logistics network. Through cutting-edge technology and a billion-dollar infrastructure, a single click can deliver almost anything to your doorstep in two days, if not 8 hours. Few, however, know exactly what happens to make this magic possible.</p>
         </div>
       </div>
       <div class="slide home-2">
@@ -40,7 +40,7 @@
         <img class="cloud cloud-5 show-mobile" src="img/cloud3.svg" alt="Cloud"/>
         <img class="arrow hide-mobile" src="img/arrow.svg" alt="Arrow"/>
         <div class="slide-inner">
-          <p>Once you click the magical "place order" button from your laptop, phone, iPad, or dash button, your order information is instaneously sent to Amazon's global network of servers in the cloud. The company owns more than <b>6 million servers</b> in more than <b>68 data centers</b> spread across the world. They use some of this capacity to power their own operations, but they also rent the computing power to other companies through their <b>Amazon Web Services</b> division, which takes in more than $15 billion each year.</p>
+          <p>Once you click the magical "place order" button from your laptop, phone, iPad, or dash button, your order information is instantaneously sent to Amazon's global network of servers in the cloud. The company owns <b>6 million servers</b> in more than <b>68 data centers</b> spread around the world across almost every continent. They use some of this capacity to run their own operations, but  much of their computing power is rented to other companies through their <b>Amazon Web Services</b> division, which makes in more than $15 billion in revenue each year.</p>
         </div>
       </div>
       <div class="slide home-3">
@@ -49,7 +49,7 @@
         <img class="fufillment-arrow" src="img/arrow.svg" alt="Arrow"/>
         <img class="fufillment-center-mobile show-mobile" src="img/fufillment-center-mobile.svg" alt="Fufillment Center" />
         <div class="slide-inner">
-          <p>In seconds, Amazon's cloud routes your order to one of their many 'Fufillment Centers': hyper-effecient warehouses built by Amazon around the globe. As of January 2017, Amazon had more than <b>90 fufillment centers</b> in the US, and dozens more internationally. These facilities are massive: many are <b>more than 1 million square feet</b>, giving Amazon room to store the <b>372 million products they offer in their marketplace</b>.</p>
+          <p>In seconds, Amazon's cloud routes your order to one of their many "Fufillment Centers": hyper-effecient warehouses built by Amazon across the globe. As of January 2017, Amazon had more than <b>90 fufillment centers</b> in the US, and dozens more internationally. These facilities are massive: many are <b>more than 1 million square feet</b>, giving Amazon room to store the <b>372 million products they offer in their marketplace</b>.</p>
         </div>
       </div>
     </section>
@@ -59,7 +59,7 @@
         <img class="shelves" src="img/shelves.svg" alt="Shelves"/>
         <img class="single-shelf" src="img/shelf-mounted.svg" alt="Single Shelf"/>
         <div class="slide-inner">
-          <p>Less than a minute after placing your order, one of Amazon's "Kiva" robots whirs to life to retrieve your items. Amazon's warehouses are filled with thousands of tall shelving units, packed close together and in seemingly random order. These shelving units contain an assortment of items, all mixed together to ensure that a given product is spread throughout the warehouse. Amazon's fleet of more than <b>45,000 robots</b> knows which shelf each item is on, and one of them will navigate to the particular shelf and pick up the entire tower of shelves. This allows Amazon to store far more products than in a traditional warehouse, because it doesn't require the humans to walk around.</p>
+          <p>Less than a minute after placing your order, one of Amazon's "Kiva" robots whirs to life to retrieve your items. Amazon's warehouses are filled with thousands of tall shelving units, packed close together and in seemingly random order. These shelving units contain an assortment of items, all mixed together to ensure that a given product is spread throughout the warehouse. Amazon's fleet of more than <b>45,000 Kiva robots</b> knows which shelf each item is on, and one of them will navigate to the particular shelving unit and pick up the entire tower. This allows Amazon to store far more products than in a traditional warehouse, because it doesn't require the humans to walk around.</p>
         </div>
       </div>
       <div class="slide warehouse-2">
@@ -75,7 +75,7 @@
           <img class="box-state labeled" src="img/box-labeled.svg" alt="Open Box"/>
         </div>
         <div class="slide-inner">
-          <p>That bin then makes its way down a series of conveyor belts until it arrives at a packing station with a waiting employee. There, the system tells the employee which type of box to use and cuts off exact lengths of tape and packaging filler, for the employee to pack the item. Once the item is safe in a box, a large machine stamps it with a shipping label and sends it off to the shipping bays.</p>
+          <p>That bin then makes its way down a series of conveyor belts until it arrives at a packing station with a waiting employee. There, the system tells the employee which size box to use and cuts off exact lengths of tape and packaging filler for the employee to pack the item. Once the item is inside a box, a large machine stamps it with a shipping label and sends it off to the shipping bays.</p>
         </div>
       </div>
       <div class="slide warehouse-4">
@@ -96,7 +96,7 @@
       <div class="slide outside-1">
         <img class="plane" src="img/plane.png" alt="Plane" />
         <div class="slide-inner">
-          <p>The trucks then hit the road to travel across the country. Some packages will make their way onto Fedex and UPS planes, others will go onto Amazon's own fleet of "Prime Air" jets, which they started using this year. Amazon has also been testing their own fleet of container ships for storing and moving inventory around the globe.</p>
+          <p>The trucks then hit the road to travel across the country. Some packages will make their way onto Fedex and UPS planes, while others will go onto Amazon's own fleet of "Prime Air" jets, which were launched in 2016. Amazon has also been testing their own fleet of container ships for storing and moving inventory around the globe.</p>
         </div>
       </div>
       <div class="slide outside-2">
@@ -107,7 +107,7 @@
         <img class="drone" src="img/drone.svg" alt="Drone"/>
         <img class="drone-box" src="img/box-labeled.svg" alt="Drone Box" />
         <div class="slide-inner">
-          <p>Packages are then sent to a regional sorting center, where they are put on trucks for home delivery. Amazon is also developing it's own fleet of drones to complete this "last-mile" delivery, and is already using it in some regions of the UK. This entire process - from order to delivery - can take as little as 8 hours, and nearly every package can be delivered anywhere in the US in two days. This feat of logistics is only made possible by Amazon's massive scale, which continues to build their domination of modern retail.</p>
+          <p>Packages are then sent to a regional sorting center where they are put on trucks for home delivery. Amazon is also developing it's own fleet of drones to complete this "last mile," and is already testing them in some regions of the UK. This entire process - from order to delivery - can take as little as 8 hours, and nearly every package can be delivered anywhere in the US in two days. This feat of logistics is only made possible by Amazon's massive scale, which continues to support their domination of modern retail.</p>
         </div>
       </div>
       <div class="house-container">
